--- a/UserAuthentication/UserAuthentication.csproj
+++ b/UserAuthentication/UserAuthentication.csproj
@@ -44,6 +44,7 @@
   <ItemGroup>
     <Compile Include="Authenticator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="AccountUpdater.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
