--- a/Baker-Grillers-Group-Project-Part-I/Baker-Grillers-Group-Project-Part-I.csproj
+++ b/Baker-Grillers-Group-Project-Part-I/Baker-Grillers-Group-Project-Part-I.csproj
@@ -48,10 +48,13 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="PresentationCore" />
+    <Reference Include="PresentationFramework" />
     <Reference Include="System">
       <HintPath>..\..\..\..\..\..\Program Files (x86)\Reference Assemblies\Microsoft\Framework\.NETFramework\v4.8\System.dll</HintPath>
     </Reference>
     <Reference Include="System.Core" />
+    <Reference Include="System.Xaml" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -61,6 +64,7 @@
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
+    <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CreateAccountForm.cs">
@@ -75,6 +79,18 @@
     </Compile>
     <Compile Include="ForgotPasswordForm.Designer.cs">
       <DependentUpon>ForgotPasswordForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Navigation\PlayersTabControl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Navigation\PlayersTabControl.Designer.cs">
+      <DependentUpon>PlayersTabControl.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Navigation\TeamsTabControl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Navigation\TeamsTabControl.Designer.cs">
+      <DependentUpon>TeamsTabControl.cs</DependentUpon>
     </Compile>
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
@@ -125,6 +141,12 @@
     <EmbeddedResource Include="ForgotPasswordForm.resx">
       <DependentUpon>ForgotPasswordForm.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Navigation\PlayersTabControl.resx">
+      <DependentUpon>PlayersTabControl.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Navigation\TeamsTabControl.resx">
+      <DependentUpon>TeamsTabControl.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Settings\CSGOPreferencesUserControl.resx">
       <DependentUpon>CSGOPreferencesUserControl.cs</DependentUpon>
     </EmbeddedResource>
@@ -168,25 +190,11 @@
     <None Include="Resources\OpenEye.png" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="BGSportsStats2DB.mdf">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="BGSportsStats2DB_log.ldf">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-      <DependentUpon>BGSportsStats2DB.mdf</DependentUpon>
-    </Content>
     <Content Include="BGSportsStatsDB.mdf">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="BGSportsStatsDB2.mdf">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="BGSportsStatsDB2_log.ldf">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-      <DependentUpon>BGSportsStatsDB2.mdf</DependentUpon>
     </Content>
     <Content Include="BGSportsStatsDB_log.ldf">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       <DependentUpon>BGSportsStatsDB.mdf</DependentUpon>
     </Content>
     <None Include="Resources\statistic.png" />
