--- a/Baker-Grillers-Group-Project-Part-I/Baker-Grillers-Group-Project-Part-I.csproj
+++ b/Baker-Grillers-Group-Project-Part-I/Baker-Grillers-Group-Project-Part-I.csproj
@@ -75,6 +75,12 @@
     <Compile Include="CreateAccountForm.Designer.cs">
       <DependentUpon>CreateAccountForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="NFLForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="NFLForm.Designer.cs">
+      <DependentUpon>NFLForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="CSGOForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -145,6 +151,9 @@
     </Compile>
     <EmbeddedResource Include="CreateAccountForm.resx">
       <DependentUpon>CreateAccountForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="NFLForm.resx">
+      <DependentUpon>NFLForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="CSGOForm.resx">
       <DependentUpon>CSGOForm.cs</DependentUpon>
