Added double click to open stats forms, bug fixes

--- a/Baker-Grillers-Group-Project-Part-I/Baker-Grillers-Group-Project-Part-I.csproj
+++ b/Baker-Grillers-Group-Project-Part-I/Baker-Grillers-Group-Project-Part-I.csproj
@@ -78,7 +78,14 @@
     <Compile Include="CreateAccountForm.Designer.cs">
       <DependentUpon>CreateAccountForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Extensions\NbaPlayerFullName.cs" />
     <Compile Include="Extensions\NflPlayerFullName.cs" />
+    <Compile Include="NBAForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="NBAForm.Designer.cs">
+      <DependentUpon>NBAForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="NFLForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -129,6 +136,7 @@
     <Compile Include="SettingsForm.Designer.cs">
       <DependentUpon>SettingsForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Settings\SettingsUtil.cs" />
     <Compile Include="Settings\CSGOPreferencesUserControl.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -155,6 +163,9 @@
     </Compile>
     <EmbeddedResource Include="CreateAccountForm.resx">
       <DependentUpon>CreateAccountForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="NBAForm.resx">
+      <DependentUpon>NBAForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="NFLForm.resx">
       <DependentUpon>NFLForm.cs</DependentUpon>
